<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="#F3F3F3"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/login_container"
        android:layout_width="370dp"
        android:layout_height="400dp"
        android:layout_marginTop="66dp"
        android:background="#CC373741"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/compu_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/logo_block" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/usernameInp"
        android:inputType="textPersonName"
        android:textColor="#F3F3F3"
        android:textColorHint="#F3F3F3"
        app:layout_constraintEnd_toEndOf="@+id/login_container"
        app:layout_constraintTop_toBottomOf="@+id/compu_logo" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColor="#F3F3F3"
        android:textColorHint="#F3F3F3"
        app:layout_constraintEnd_toEndOf="@+id/login_container"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <Button
        android:id="@+id/loginSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/loginButText"
        android:textAlignment="center"
        android:textColor="#F3F3F3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/login_container"
        app:layout_constraintStart_toStartOf="@+id/login_container"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/registerBut"
        android:textColor="#F3F3F3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/login_container"
        app:layout_constraintStart_toStartOf="@+id/login_container"
        app:layout_constraintTop_toBottomOf="@+id/loginSubmit" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/linkvantage_title"
        android:textColor="#F3F3F3"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_container" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/forgot_pw"
        android:textColor="#F3F3F3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/login_container"
        app:layout_constraintEnd_toEndOf="@+id/login_container"
        app:layout_constraintStart_toStartOf="@+id/login_container" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/usernameInput"
        app:layout_constraintTop_toBottomOf="@+id/compu_logo"
        app:srcCompat="@drawable/ic_account" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/ic_lock" />
</androidx.constraintlayout.widget.ConstraintLayout>

